# Web-Terminal

./: .gitignore  CMakeLists.txt  README.md  Web Terminal.rar  main.c
client/: index.js  output.txt  test.html  test2.html
esc_parser/: esc_parser.c  esc_parser.h  output.txt  tests  tests.c
example/: edexec.c  terminal_control.c  ump_control.js
server/: httpd.c  httpd.h
server/test_queries/: query.txt  query2.txt  query_get.txt
testf/: htmltest.html  htopoutput.txt  test  test.c  test2  test2.c  testpipe.c
tools/: tools.c  tools.h
tty/: editor.c  editor.h  tty.c  tty.h
